--- a/index.html
+++ b/index.html
@@ -367,6 +367,16 @@
   </li>
   </ul>
 </div>
+<div class="newsletter">
+  <form>
+<label>
+  Zapisz się do newslettera
+  <input type="email" name="email"/>
+  
+</label>
+<button type="submit" class="newsletter-btn">Zapisz się<svg width="24px" height="24px"><use href="./images/icons.svg#icon-icon-send"></use></svg></button>
+  </form>
+</div>
 </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
