--- a/portfolio.html
+++ b/portfolio.html
@@ -210,6 +210,15 @@
   </li>
   </ul>
 </div>
+<div class="newsletter-block">
+  <form class="newsletter">
+<label class="newsletter-label">
+ <p class="newsletter-title">Zapisz się do newslettera</p>
+  <input class="newsletter-input" type="email" name="email" placeholder="E-mail"/>
+</label>
+<button type="submit" class="newsletter-btn">Zapisz się<svg width="24px" height="24px"><use href="./images/icons.svg#icon-icon-send"></use></svg></button>
+  </form>
+</div>
 </div>
     </footer>
 </body>
