--- a/index.html
+++ b/index.html
@@ -422,11 +422,8 @@
             <textarea name="feedback" placeholder="Wprowadź tekst" ></textarea>
           </label>
           <label class="checkbox">
-            <input type="checkbox" value="Accept the regulations and privacy policy"/>
-            <svg width="16px" height="15px">
-              <use href="./images/icons.svg#icon-checkbox-active"></use>
-            </svg>
-            Oświadczam iż akceptuję<a href="" class="policy">Regulamin</a>i<a href="" class="policy">Politykę Prywatności.</a>
+            <input class="checkbox-policy" type="checkbox" value="Accept the regulations and privacy policy"/>
+           <span class="checkbox-label">Oświadczam iż akceptuję<a href="" class="policy">Regulamin</a>i<a href="" class="policy">Politykę Prywatności.</a></span>
           </label>
           <button class="form-btn">Wyślij</button>
         </div>
